# fractall

./: .gitignore  AUTHORS  BUGS_FOUND.md  CLAUDE.md  ChangeLog  FRACTALES_RECHERCHE.md  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  PLAN_CORRECTION_NOVA.md  PLAN_RECHERCHE_FRACTALES.md  README  README.md  TODO  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure~  libtool
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
docs/: 2013-12-30_ultimate_anti-buddhabrot.c  complexmath.man  complexmath.txt
src/: EscapeTime.c  EscapeTime.h  Makefile  Makefile.am  Makefile.in  SDLGUI.c  SDLGUI.h  SDL_gfxPrimitives.h  SDL_imageFilter.h  SDL_rotozoom.h  VonKoch.c  VonKoch.h  color_types.h  colorization.c  colorization.h  complexmath.c  complexmath.h  complexmath_gmp.c  complexmath_gmp.h  complexmath_simd.c  exception.c  exception.h  fractal_definitions.c  fractal_definitions.h  fractal_iterations.c  fractal_iterations.h  fractal_iterations_gmp.c  fractal_iterations_gmp.h  fractal_special.c  fractal_special.h  fractal_types.h  fractall  gmp_pool.c  gmp_pool.h  main.c  png_save.c  png_save.h  precision_detector.c  precision_detector.h
src/.deps/: EscapeTime.Po  SDLGUI.Po  SDL_gfxPrimitives.Po  SDL_imageFilter.Po  SDL_rotozoom.Po  VonKoch.Po  complexmath.Po  complexmath_gmp.Po  exception.Po  gmp_pool.Po  main.Po  precision_detector.Po
